force-app/main/default/objects/FSAM_Customer_Asset__c/FSAM_Customer_Asset__c.object-meta.xml
<CustomObject>
    <label>FSAM Customer Asset</label>
    <nameField>
        <displayFormat>AST-{00000}</displayFormat>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSAM Customer Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>