force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Account__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Customer who owns the asset.</description>
    <inlineHelpText>Select the customer account that owns this asset.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FSAM Customer Assets</relationshipLabel>
    <relationshipName>FSAM_Customer_Assets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>