force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Asset_Name__c</fullName>
    <description>Human-readable name of the installed customer asset.</description>
    <inlineHelpText>Enter a meaningful name that helps users identify the asset.</inlineHelpText>
    <label>Asset Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>