force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Asset_Type__c</fullName>
    <description>Business classification of the customer asset.</description>
    <inlineHelpText>Select the business type that best represents the installed asset.</inlineHelpText>
    <label>Asset Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Office Equipment</fullName>
            </value>
            <value>
                <fullName>Power Systems</fullName>
            </value>
            <value>
                <fullName>Medical Equipment</fullName>
            </value>
            <value>
                <fullName>Security Systems</fullName>
            </value>
            <value>
                <fullName>Network Equipment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>