force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_City__c.field-meta.xml
<CustomField>
    <fullName>FSAM_City__c</fullName>
    <description>Tracks installation city.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>