force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Country__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>