force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_External_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>FSAM_External_Asset_ID__c</fullName>
    <description>Stores the external system identifier for integrations.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores the external system identifier for integrations.</inlineHelpText>
    <label>External Asset ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>