force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Installation_Date__c</fullName>
    <description>Tracks when the asset was installed.</description>
    <label>Installation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>