force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Location_Notes__c</fullName>
    <description>Additional directions for engineers.</description>
    <inlineHelpText>Additional directions for engineers.</inlineHelpText>
    <label>Location Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>