force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Model_Number__c</fullName>
    <description>Manufacturer model identifier.</description>
    <inlineHelpText>Enter the manufacturer&apos;s model number.</inlineHelpText>
    <label>Model Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>