force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>