force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Serial_Number__c</fullName>
    <description>Manufacturer-issued unique serial number.</description>
    <inlineHelpText>Enter the manufacturer&apos;s serial number exactly as printed on the asset.</inlineHelpText>
    <label>Serial Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>