force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Service_Contact__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Service_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary service contact for this asset.</description>
    <inlineHelpText>Select the customer contact responsible for service coordination.</inlineHelpText>
    <label>Service Contact</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>FSAM Customer Assets</relationshipLabel>
    <relationshipName>FSAM_Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>