force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_State__c.field-meta.xml
<CustomField>
    <fullName>FSAM_State__c</fullName>
    <description>Tracks installation state.</description>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>