force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Status__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Status__c</fullName>
    <description>Current lifecycle state of the asset.</description>
    <inlineHelpText>Current lifecycle state of the asset.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>