force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Street__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Street__c</fullName>
    <description>Installation street address.</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>