force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Warranty_Active__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Warranty_Active__c</fullName>
    <description>Automatically indicates whether the asset is currently under warranty.</description>
    <formula>AND(
    TODAY() &gt;= FSAM_Warranty_Start_Date__c,
    TODAY() &lt;= FSAM_Warranty_End_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically indicates whether the asset is currently under warranty.</inlineHelpText>
    <label>Warranty Active</label>
    <type>Checkbox</type>
</CustomField>