force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Warranty_End_Date__c</fullName>
    <description>End date of warranty</description>
    <inlineHelpText>End date of warranty</inlineHelpText>
    <label>Warranty End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>