force-app/main/default/objects/FSAM_Customer_Asset__c/fields/FSAM_Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Warranty_Start_Date__c</fullName>
    <description>Start Date of Warranty</description>
    <inlineHelpText>Start Date of Warranty</inlineHelpText>
    <label>Warranty Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>