force-app/main/default/objects/FSAM_Customer_Asset__c/validationRules/FSAM_VR_Installation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Installation_Date</fullName>
    <active>true</active>
    <errorConditionFormula>FSAM_Installation_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>FSAM_Installation_Date__c</errorDisplayField>
    <errorMessage>Installation date cannot be in the future.</errorMessage>
</ValidationRule>