force-app/main/default/objects/FSAM_Customer_Asset__c/validationRules/FSAM_VR_Retired_Asset.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Retired_Asset</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( FSAM_Status__c , &quot;Retired&quot;),
    FSAM_Warranty_End_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorMessage>If Status = Retired, the warranty period must have ended</errorMessage>
</ValidationRule>