force-app/main/default/objects/FSAM_Customer_Asset__c/validationRules/FSAM_VR_Warranty_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Warranty_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>FSAM_Warranty_End_Date__c &lt;  FSAM_Warranty_Start_Date__c</errorConditionFormula>
    <errorMessage>Warranty End Date must be on or after Warranty Start Date.</errorMessage>
</ValidationRule>