force-app/main/default/objects/FSAM_Customer_Asset__c/listViews/Active_Assets.listView-meta.xml
<ListView>
    <fullName>Active_Assets</fullName>
    <columns>FSAM_Asset_Name__c</columns>
    <columns>FSAM_Account__c</columns>
    <columns>FSAM_Asset_Type__c</columns>
    <columns>FSAM_Warranty_Active__c</columns>
    <columns>FSAM_Warranty_End_Date__c</columns>
    <columns>FSAM_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FSAM_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Assets</label>
</ListView>